Fixed error with openapi.yaml
